--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <style>
   body {
     background: black;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
   }
 </style>
 <canvas></canvas>
-
-<script>
-  const canvas = document.querySelector("canvas");
-  const c = canvas.getContext("2d");
-  
-</script>
+<script src="index.js"></script>
