--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 </style>
 <canvas></canvas>
