event listeners moved to separated file

--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
 </style>
 <canvas></canvas>
 <script src="js/classes/Player.js"></script>
+<script src="js/eventListeners.js"></script>
 <script src="index.js"></script>
