added logik to draw collision blocks

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
+/* 
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
   }
 </style>
 <canvas></canvas>
 <script src="js/classes/Player.js"></script>
+<script src="js/classes/CollisionBlock.js"></script>
 <script src="js/classes/Sprite.js"></script>
 <script src="js/eventListeners.js"></script>
+<script src="js/utils.js"></script>
+<script src="data/colissions.js"></script>
 <script src="index.js"></script>
