--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="js/data/collisions.js"></script>
 <script src="js/utils.js"></script>
+<script src="js/initLevels.js"></script>
 <script src="js/classes/CollisionBlock.js"></script>
 <script src="js/classes/Sprite.js"></script>
 <script src="js/classes/Player.js"></script>
